--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html dir="rtl" lang="ar">
     <head>
-        <title>Abbreviations</title>
+        <title>Abbreviationsapp-apps</title>
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -12,7 +13,8 @@
     <body>
         <nav class="navbar">
             <header>
-                <img class="logo" src="" alt="logo">
+                <div class="nav_text">
+                    <span class="name">مختصر التطبيقات</span>
                 <nav>
                      <ul class="nav_links">
                         <li><a href="index.html">الرئيسية</a></li>
@@ -21,9 +23,10 @@
                      </ul>
                 </nav>
             </header>
-            <section>
-                <h1></h1>
-            </section>
         </nav>
+            <section>
+               <h1>البرامج :</h1>
+               
+            </section>
     </body>
 </html>
