--- a/index4.html
+++ b/index4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html dir="rtl" lang="ar">
     <head>
-        <title>Abbreviationsapp-home</title>
+        <title>Abbreviationsapp-vscode</title>
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,16 +25,7 @@
             </header>
         </nav>    
             <section>
-                <h1>ما هو مختصر التطبيقات ؟</h1>
-                <h2>هو صفحة جامعة لكل اختصارات التطبيقات <br>
-                    الإنتاج بالتفصيل <br>
-                    مثل :
-            </h2>
-            <h3>visual studio code</h3>
-            <h3>Excel</h3>
-            <h3>photoshop</h3>
-            <h3>Blender</h3>
-            <h2>وغيرها الكثير من البرامج .</h2>
+                <h1>visual studio code</h1>
             </section>
     </body>
 </html>
