--- a/index2.html
+++ b/index2.html
@@ -24,9 +24,24 @@
                 </nav>
             </header>
         </nav>
-            <section>
+            
                <h1>البرامج :</h1>
-               
-            </section>
+
+               <div class="square">
+                <h1>This is a Square</h1>
+            </div>
+
+            <div class="square">
+                <h1>This is a Square</h1>
+            </div>
+
+            <div class="square">
+                <h1>This is a Square</h1>
+            </div>
+
+            <div class="square">
+                <h1>This is a Square</h1>
+            </div>
+
     </body>
 </html>
