--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         <link href="https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
-        <link rel="mainsheet" href="main.js">
     </head>
     <body>
         <nav class="navbar">
@@ -26,7 +25,7 @@
         </nav>    
             
                 <h1>ما هو مختصر التطبيقات ؟</h1>
-                <h2>هو صفحة جامعة لكل اختصارات التطبيقات <br>
+                <h2>هي صفحة تجمع كل اختصارات التطبيقات <br>
                     الإنتاج بالتفصيل <br>
                     مثل :
             </h2>
