--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,6 @@
         <link href="https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
-        <link rel="mainsheet" href="main.js">
     </head>
     <body>
         <nav class="navbar">
@@ -26,22 +25,12 @@
         </nav>
             
                <h1>البرامج :</h1>
-
-               <div class="square">
-                <h1>This is a Square</h1>
-            </div>
-
-            <div class="square">
-                <h1>This is a Square</h1>
-            </div>
-
-            <div class="square">
-                <h1>This is a Square</h1>
-            </div>
-
-            <div class="square">
-                <h1>This is a Square</h1>
-            </div>
+               <ul class="menu_links">
+                <li><a href="index4.html">visual studio code</a></li>
+                <li><a href="index5.html">microsoft apps</a></li>
+                <li><a href="index6.html">adobe apps</a></li>
+                <li><a href="index7.html">3D apps</a></li>
+        </ul>
 
     </body>
 </html>
